# LoftyMusic

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
docker/: api.Dockerfile  frontend.Dockerfile  worker-gpu.Dockerfile  worker.Dockerfile
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdapterSelector.tsx  AuthProvider.tsx  Equalizer.tsx  ErrorBoundary.tsx  GenerateForm.tsx  JobCard.tsx  Navbar.tsx
frontend/src/hooks/: useJobs.ts
frontend/src/lib/: api.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_composite_indexes.py  003_add_ace_step_support.py  004_add_finetune_models.py  005_add_compute_mode.py
notebooks/: lofty_colab_ace_step.ipynb  lofty_colab_yue.ipynb
scripts/: download_model.py  package_for_colab.sh  seed_db.py  setup_colab.sh
src/lofty/: __init__.py  config.py  dependencies.py  main.py
src/lofty/api/: datasets.py  finetune.py  gpu.py  health.py  jobs.py  router.py  sse.py  tracks.py  uploads.py  users.py  worker.py
src/lofty/auth/: __init__.py  clerk.py
src/lofty/db/: __init__.py  session.py
src/lofty/infra/: __init__.py  autoscaler.py  gpu_provisioner.py
src/lofty/models/: __init__.py  base.py  dataset.py  finetune.py  job.py  track.py  upload.py  user.py
src/lofty/schemas/: __init__.py  auth.py  (+6 more)
tests/: conftest.py  test_generator.py  test_health.py  test_jobs.py  test_tracks.py
(+35 files in other folders)
