[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lofty"
version = "0.1.0"
description = "AI Music Generation Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.35",
    "PyJWT>=2.10",
    "cryptography>=44",
    "httpx>=0.28",
    "structlog>=24.4",
    "scipy>=1.14",
    "python-multipart>=0.0.9",
    "soundfile>=0.12",
]

[project.optional-dependencies]
worker = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "transformers>=4.47",
    "accelerate>=1.2",
]
ace-step = [
    "ace-step @ git+https://github.com/ace-step/ACE-Step-1.5.git",
    "peft>=0.14.0",
    "soundfile>=0.12",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lofty"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
